# python-dependency-experiment

./: .gitignore  Dockerfile  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
project_2/: main.py  requirements.txt
project_3/: main.py  pyproject.toml
